--- a/log.html
+++ b/log.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Fourch est, livraison de repas a domicile, cuisine lorraine, alsace, grand est">
     <meta name="author" content="Wilders Grand'EST">
     <link href="./dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/styles.css">
     <title>Connexion</title>
 </head>
 
