--- a/order.html
+++ b/order.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Wilders Grand'EST">
   <meta name="author" content="Wilders Grand'EST" />
   <link href="./dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="./src/style.css">
+  <link rel="stylesheet" href="./src/styles.css">
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <title>FourchEst | Order-Page</title>
 </head>
