--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Fourch est, livraison de repas a domicile, cuisine lorraine, alsace, grand est"
-    />
-    <meta
-      name="description"
       content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales."
     />
     <link rel="icon" type="image/x-icon" href="assetes\images\favicon.ico" />
     <meta name="author" content="Wilders Grand'EST" />
     <link href="./dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/styles.css">
     
     <title>FourchEst | HomePage</title>
   </head>
 
-  <body>
+   <body>
     <header>
       <nav class="relative flex items-center justify-center">
         <a class="focus:" href="log.html"
@@ -422,8 +418,8 @@
         </div>
       </div>
     </footer>
-
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="toggle.js"></script>
+    <script type="module" src="carousel.js"></script>
     <script type="module" src="./index.js"></script>
 
      <!---------------------------Background--------------------->
@@ -447,7 +443,8 @@
       '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.1 2 4 10 4 14a8 8 0 0 0 16 0c0-4-4.1-12-8-12z"/></svg>',
       // Glace
       '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a5 5 0 0 0-5 5 5 5 0 0 0 .3 1.7A4.5 4.5 0 0 0 6 12h12a4.5 4.5 0 0 0-1.3-3.3A5 5 0 0 0 12 2zm0 13l-2 5h4l-2-5z"/></svg>',
-      ];
+      
+    ];
 
     const pageHeight = Math.max(document.body.scrollHeight, document.documentElement.scrollHeight);
     const numIcons = 150;
