--- a/final-order.html
+++ b/final-order.html
@@ -8,10 +8,22 @@
     content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <meta name="author" content="Wilders Grand'EST">
-  <link href="./dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="./src/styles.css">
+  <link rel="stylesheet" href="./src/style.css">
   <title>Finaliser la commande - Brasserie Excelsior</title>
-
+  <style>
+    #fireworks-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 9999;
+        background: rgba(0, 0, 0, 0.7);
+        display: none;
+    }
+</style>
+a
 </head>
 
 
@@ -23,7 +35,7 @@
   <header>
     <nav class="relative flex items-center justify-center">
       <a href="log.html"><svg class="h-8 text-white absolute top-2 right-0 w-10" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="bg-black" viewBox="0 0 24 24">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18Zm0 0a8.949 8.949 0 0 0 4.951-1.488A3.987 3.987 0 0 0 13 16h-2a3.987 3.987 0 0 0-3.951 3.512A8.948 8.948 0 0 0 12 21Zm3-11a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
         </svg></a>
@@ -42,8 +54,8 @@
 
 
     <!---------------------------Bannière du restaurant--------------------->
-    <section class="relative">
-      <img src="/assetes/images/resto1OrderP.jpg" alt="Restaurant Bannière" class="w-full h-56 object-cover" />
+    <section class="lg:flex lg:justify-center">
+      <img src="/assetes/images/resto1.jpg" alt="Restaurant banner" class=" lg:w-7xl lg:rounded-xl lg:h-80   object-cover" />
     </section>
 
 
@@ -109,15 +121,21 @@
               </div>
 
               <!---------------------------Bouton de finalisation--------------------->
-              <button type="button"
+              <button type="button" id="commande-btn"
                 class="w-full bg-[#191968] text-white hover:text-black px-4 mt-3 py-2 rounded-full hover:bg-blue-300 transition">
                 Finaliser la commande
               </button>
+
+              <!-- Conteneur des feux d'artifice -->
+              <div id="fireworks-container"></div>
+
             </form>
           </div>
         </div>
       </div>
+            <!---------------------------Feux d'artifice--------------------->
 
+      
 
       <!---------------------------Lien pour retourner à la sélection (order.html)--------------------->
       <div class="mt-6 mb-5 text-center">
@@ -246,6 +264,7 @@
 
 
   <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./validation.js"></script>
 </body>
 
 </html>
