--- a/order.html
+++ b/order.html
@@ -9,8 +9,7 @@
     content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
   <meta name="author" content="Wilders Grand'EST">
   <meta name="author" content="Wilders Grand'EST" />
-  <link href="./dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="./src/styles.css">
+  <link rel="stylesheet" href="./src/style.css" />
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <title>FourchEst | Order-Page</title>
 </head>
@@ -22,7 +21,7 @@
   <header>
     <nav class="relative flex items-center justify-center">
       <a href="log.html"><svg class="h-8 text-white absolute top-2 right-0 w-10" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="bg-black" viewBox="0 0 24 24">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18Zm0 0a8.949 8.949 0 0 0 4.951-1.488A3.987 3.987 0 0 0 13 16h-2a3.987 3.987 0 0 0-3.951 3.512A8.948 8.948 0 0 0 12 21Zm3-11a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
         </svg></a>
@@ -36,8 +35,8 @@
 
   <main class="pb-16 flex-1">
     <!---------------------------Bannière du restaurant--------------------->
-    <section class="relative">
-      <img src="/assetes/images/resto1OrderP.jpg" alt="Restaurant banner" class="w-full h-56 object-cover" />
+    <section class="lg:flex lg:justify-center">
+      <img src="/assetes/images/resto1.jpg" alt="Restaurant banner" class="sm:w-full lg:w-7xl lg:rounded-xl lg:h-80 sm:h-36  object-cover" />
     </section>
 
     <!---------------------------Nom du restaurant sélectionné--------------------->
@@ -581,9 +580,9 @@
       <!-- Copyright -->
       <p class="text-xs ">&copy; 2025</p>
       <div>
-        <a href="about.html" class="text-[#191998] font-normal text-sm
-         hover:underline bg-white p-1 rounded-full ">
-          Mentions légales
+        <a class="text-xs" href="about.html">
+          <p class="flex justify-center 
+            ">Mentions légales</p>
         </a>
       </div>
 
