--- a/restaurant.html
+++ b/restaurant.html
@@ -8,8 +8,7 @@
         content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
     <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
     <meta name="author" content="Wilders Grand'EST">
-    <link href="./dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Fourch'Est - Nos Restaurant</title>
 
 </head>
@@ -225,3 +224,4 @@
 </body>
 
 </html>
+<!-- Commentaire -->
