--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
         content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
     <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
     <meta name="author" content="Wilders Grand'EST">
-    <link href="./dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="./src/style.css">
     <title>A propos | Fouch'Est</title>
 </head>
 
@@ -19,7 +18,7 @@
 
         <nav class="relative flex items-center justify-center">
             <a href="log.html"><svg class="h-8 text-white absolute top-2 right-0 w-10" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="bg-black" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18Zm0 0a8.949 8.949 0 0 0 4.951-1.488A3.987 3.987 0 0 0 13 16h-2a3.987 3.987 0 0 0-3.951 3.512A8.948 8.948 0 0 0 12 21Zm3-11a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                 </svg></a>
@@ -248,92 +247,92 @@
 
     <!---------------------------FOOTER--------------------------->
 
-  <footer class="text-black border-t border-black bg-white/95 py-4 
+    <footer class="text-black border-t border-black bg-white/95 py-4 
   ">
-  <div class="w-full flex justify-between items-center px-4">
-    <!-- Copyright -->
-    <p class="text-xs ">&copy; 2025</p>
-    <div>
-      <a href="about.html" class="text-[#191998] font-normal text-sm
+        <div class="w-full flex justify-between items-center px-4">
+            <!-- Copyright -->
+            <p class="text-xs ">&copy; 2025</p>
+            <div>
+                <a href="about.html" class="text-[#191998] font-normal text-sm
        hover:underline bg-white p-1 rounded-full ">
-        Mentions légales
-      </a>
-    </div>
+                    Mentions légales
+                </a>
+            </div>
 
-    <!---------------------------Social Media Icons--------------------->
-    <div class="flex space-x-4">
-      <a href="#" class="hover:text-blue-500">
-        <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-          height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path fill-rule="evenodd"
-            d="M13.135 6H15V3h-1.865a4.147 4.147 0 0 0-4.142 4.142V9H7v3h2v9.938h3V12h2.021l.592-3H12V6.591A.6.6 0 0 1 12.592 6h.543Z"
-            clip-rule="evenodd" />
-        </svg>
-      </a>
-      <a href="#" class="hover:text-blue-400">
-        <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-          height="24" fill="none" viewBox="0 0 24 24">
-          <path fill="currentColor" fill-rule="evenodd"
-            d="M3 8a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8Zm5-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H8Zm7.597 2.214a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2h-.01a1 1 0 0 1-1-1ZM12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-5 3a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z"
-            clip-rule="evenodd" />
-        </svg>
-      </a>
-      <a href="#" class="hover:text-pink-500">
-        <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-          height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path
-            d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z" />
-        </svg>
-      </a>
-    </div>
-  </div>
-</footer>
+            <!---------------------------Social Media Icons--------------------->
+            <div class="flex space-x-4">
+                <a href="#" class="hover:text-blue-500">
+                    <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd"
+                            d="M13.135 6H15V3h-1.865a4.147 4.147 0 0 0-4.142 4.142V9H7v3h2v9.938h3V12h2.021l.592-3H12V6.591A.6.6 0 0 1 12.592 6h.543Z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </a>
+                <a href="#" class="hover:text-blue-400">
+                    <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" fill="none" viewBox="0 0 24 24">
+                        <path fill="currentColor" fill-rule="evenodd"
+                            d="M3 8a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8Zm5-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H8Zm7.597 2.214a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2h-.01a1 1 0 0 1-1-1ZM12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-5 3a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </a>
+                <a href="#" class="hover:text-pink-500">
+                    <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <!-- SCRIPT-->
     <script src="/about.js"></script>
     <script type="module" src="./src/main.js"></script>
 
-     <!---------------------------Background--------------------->
-  <script>
-    const icons = [
-      // Fourchette
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7 2a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zM6 10v2a2 2 0 0 0 2 2v9a1 1 0 1 0 2 0v-9a2 2 0 0 0 2-2v-2H6z"/></svg>',
-      // Pizza
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M21 2S6.5 3.5 3 21c7.5-2.7 14.6-9.1 18-18zM7.5 19.5l1.1-3.9 2.3 2.3-3.4 1.6zm7.5-6a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/></svg>',
-      // Eponge
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a4 4 0 0 0-4 4c0 1.3.6 2.5 1.5 3.2V20a1 1 0 0 0 2 0V9.2A4 4 0 0 0 12 2z"/></svg>',
-      // Couteau
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 2l13 13-4 4L2 6l1-4z"/></svg>',
-      // Verre de vin
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 2h8l-1 8H9L8 2zm2 10h4v9h-4v-9z"/></svg>',
-      // tasse de café
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 8h2a2 2 0 0 1 0 4h-2V8zM2 6h16v6a6 6 0 0 1-6 6H8a6 6 0 0 1-6-6V6zm2 14h12v2H4v-2z"/></svg>',
-      // Pain
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 6c0-1.1.9-2 2-2h12a2 2 0 0 1 0 4H4V6z"/></svg>',
-      // Oeuf
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.1 2 4 10 4 14a8 8 0 0 0 16 0c0-4-4.1-12-8-12z"/></svg>',
-      // Glace
-      '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a5 5 0 0 0-5 5 5 5 0 0 0 .3 1.7A4.5 4.5 0 0 0 6 12h12a4.5 4.5 0 0 0-1.3-3.3A5 5 0 0 0 12 2zm0 13l-2 5h4l-2-5z"/></svg>',
-      
-    ];
+    <!---------------------------Background--------------------->
+    <script>
+        const icons = [
+            // Fourchette
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7 2a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1zM6 10v2a2 2 0 0 0 2 2v9a1 1 0 1 0 2 0v-9a2 2 0 0 0 2-2v-2H6z"/></svg>',
+            // Pizza
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M21 2S6.5 3.5 3 21c7.5-2.7 14.6-9.1 18-18zM7.5 19.5l1.1-3.9 2.3 2.3-3.4 1.6zm7.5-6a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/></svg>',
+            // Eponge
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a4 4 0 0 0-4 4c0 1.3.6 2.5 1.5 3.2V20a1 1 0 0 0 2 0V9.2A4 4 0 0 0 12 2z"/></svg>',
+            // Couteau
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 2l13 13-4 4L2 6l1-4z"/></svg>',
+            // Verre de vin
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 2h8l-1 8H9L8 2zm2 10h4v9h-4v-9z"/></svg>',
+            // tasse de café
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 8h2a2 2 0 0 1 0 4h-2V8zM2 6h16v6a6 6 0 0 1-6 6H8a6 6 0 0 1-6-6V6zm2 14h12v2H4v-2z"/></svg>',
+            // Pain
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 6c0-1.1.9-2 2-2h12a2 2 0 0 1 0 4H4V6z"/></svg>',
+            // Oeuf
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.1 2 4 10 4 14a8 8 0 0 0 16 0c0-4-4.1-12-8-12z"/></svg>',
+            // Glace
+            '<svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a5 5 0 0 0-5 5 5 5 0 0 0 .3 1.7A4.5 4.5 0 0 0 6 12h12a4.5 4.5 0 0 0-1.3-3.3A5 5 0 0 0 12 2zm0 13l-2 5h4l-2-5z"/></svg>',
 
-    const pageHeight = Math.max(document.body.scrollHeight, document.documentElement.scrollHeight);
-    const numIcons = 150;
+        ];
 
-    for (let i = 0; i < numIcons; i++) {
-      const icon = document.createElement('div');
-      icon.classList.add('icon');
-      if (Math.random() > 0.5) icon.classList.add('alt');
-      icon.style.top = Math.random() * pageHeight + 'px';
-      icon.style.left = Math.random() * 100 + 'vw';
-      icon.style.animationDelay = `${Math.random() * 0}s, ${Math.random() * 0}s`;
-      const size = 20 + Math.random() * 40;
-      icon.style.width = size + 'px';
-      icon.style.height = size + 'px';
-      icon.innerHTML = icons[Math.floor(Math.random() * icons.length)];
-      document.body.appendChild(icon);
-    }
-  </script>
+        const pageHeight = Math.max(document.body.scrollHeight, document.documentElement.scrollHeight);
+        const numIcons = 150;
+
+        for (let i = 0; i < numIcons; i++) {
+            const icon = document.createElement('div');
+            icon.classList.add('icon');
+            if (Math.random() > 0.5) icon.classList.add('alt');
+            icon.style.top = Math.random() * pageHeight + 'px';
+            icon.style.left = Math.random() * 100 + 'vw';
+            icon.style.animationDelay = `${Math.random() * 0}s, ${Math.random() * 0}s`;
+            const size = 20 + Math.random() * 40;
+            icon.style.width = size + 'px';
+            icon.style.height = size + 'px';
+            icon.innerHTML = icons[Math.floor(Math.random() * icons.length)];
+            document.body.appendChild(icon);
+        }
+    </script>
 </body>
 
 </html>
