--- a/account.html
+++ b/account.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
     <meta name="author" content="Wilders Grand'EST">
     <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="dist/output.css">
     <title>Account</title>
 </head>
 
