--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="icon" type="image/x-icon" href="assetes\images\favicon.ico" />
     <meta name="author" content="Wilders Grand'EST" />
+    <link rel="stylesheet" href="dist/output.css">
     <link rel="stylesheet" href="./src/style.css" />
     <title>FourchEst | HomePage</title>
   </head>
@@ -421,8 +422,9 @@
       </div>
     </footer>
 
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="toggle.js"></script>
     <script type="module" src="./index.js"></script>
+    <script type="module" src="carousel.js"></script>
 
      <!---------------------------Background--------------------->
   <script>
