--- a/order.html
+++ b/order.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Fourch est, livraison de repas a domicile, cuisine lorraine, alsace, grand est" />
   <meta name="description"
     content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
   <meta name="author" content="Wilders Grand'EST">
-  <meta name="author" content="Wilders Grand'EST" />
   <link rel="stylesheet" href="./src/style.css" />
+  <link rel="stylesheet" href="dist/output.css">
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <title>FourchEst | Order-Page</title>
 </head>
