--- a/final-order.html
+++ b/final-order.html
@@ -8,6 +8,7 @@
     content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <meta name="author" content="Wilders Grand'EST">
+  <link rel="stylesheet" href="dist/output.css">
   <link rel="stylesheet" href="./src/style.css">
   <title>Finaliser la commande - Brasserie Excelsior</title>
   <style>
