--- a/account.html
+++ b/account.html
@@ -8,8 +8,8 @@
         content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
     <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
     <meta name="author" content="Wilders Grand'EST">
-    <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="dist/output.css">
+    <link rel="stylesheet" href="./src/styles.css">
     <title>Account</title>
 </head>
 
@@ -25,7 +25,7 @@
                 </svg>
             </a>
 
-            <a href="index.html"><img src="./assetes/images/FourchEst_Logo.png" alt="logo Fourch'Est"
+            <a href="index.html>"><img src="./assetes/images/FourchEst_Logo.png" alt="logo Fourch'Est"
                     class="mt-5 mb-7 w-50 flex" /></a>
         </nav>
 
