--- a/final-order.html
+++ b/final-order.html
@@ -8,8 +8,9 @@
     content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
   <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
   <meta name="author" content="Wilders Grand'EST">
+  <link rel="stylesheet" href="./src/styles.css">
   <link rel="stylesheet" href="dist/output.css">
-  <link rel="stylesheet" href="./src/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.x/dist/index.umd.js"></script>
   <title>Finaliser la commande - Brasserie Excelsior</title>
   <style>
     #fireworks-container {
@@ -24,7 +25,6 @@
         display: none;
     }
 </style>
-a
 </head>
 
 
@@ -36,7 +36,7 @@ a
   <header>
     <nav class="relative flex items-center justify-center">
       <a href="log.html"><svg class="h-8 text-white absolute top-2 right-0 w-10" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="bg-black" viewBox="0 0 24 24">
+          xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18Zm0 0a8.949 8.949 0 0 0 4.951-1.488A3.987 3.987 0 0 0 13 16h-2a3.987 3.987 0 0 0-3.951 3.512A8.948 8.948 0 0 0 12 21Zm3-11a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
         </svg></a>
@@ -262,10 +262,38 @@ a
     document.getElementById("orderTotal").textContent = total.toFixed(2) + "€";
   </script>
 
-
-
-  <script type="module" src="./src/main.js"></script>
-  <script type="module" src="./validation.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const button = document.getElementById('commande-btn');
+    const fireworksContainer = document.getElementById('fireworks-container');
+  
+    button.addEventListener('click', () => {
+      // Afficher le conteneur
+      fireworksContainer.style.display = 'block';
+  
+      // Instancier Fireworks en utilisant la version UMD
+      const fireworks = new Fireworks.default(fireworksContainer, {
+        rocketsPoint: { min: 0, max: 100 },
+        particles: 150,
+        traceLength: 5,
+        explosion: 7,
+        intensity: 40,
+        gravity: 1.5,
+        flickering: 60,
+        opacity: 0.7
+      });
+  
+      fireworks.start();
+  
+      // Arrêter après 10 secondes et rediriger vers index.html
+      setTimeout(() => {
+        fireworks.stop();
+        fireworksContainer.style.display = 'none';
+        window.location.href = 'index.html';
+      }, 10000);
+    });
+  });
+  </script>
 </body>
 
 </html>
