--- a/restaurant.html
+++ b/restaurant.html
@@ -8,7 +8,7 @@
         content="Les meilleurs restaurants du Grand Est, livrés chez vous ! Trouvez facilement des adresses incontournables avec des options végétariennes et locales.">
     <link rel="icon" type="image/x-icon" href="assetes/images/favicon.ico">
     <meta name="author" content="Wilders Grand'EST">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/styles.css">
     <link rel="stylesheet" href="dist/output.css">
     <title>Fourch'Est - Nos Restaurant</title>
 
